DASH-95 Fix text wrapping in orders list table header column

--- a/client/src/pages/OrdersPage/components/OrdersList/OrdersList.module.scss
+++ b/client/src/pages/OrdersPage/components/OrdersList/OrdersList.module.scss
@@ -9,6 +9,7 @@
     background-color: $white;
     padding-bottom: 15px;
     font-size: 0.875em;
+    white-space: nowrap;
     @include sf-pro-display-medium;
 
     &:first-child {
